--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   <section id="vk" class="fadein">
     <h2>Присоединяйтесь к нашему сообществу</h2>
     <p>Следите за новостями, участвуйте в обсуждениях и получайте помощь:</p>
-    <a class="btn" href="https://vk.com/allegoryteamserver" target="_blank">Группа ВКонтакте</a>
+    <a class="btn" href="https://vk.com/allegorycraft" target="_blank">Группа ВКонтакте</a>
     
     <div style="margin-top:30px; border: 2px solid var(--main-color); border-radius: 8px; overflow: hidden;">
       <iframe src="https://vk.com/widget_community.php?app=0&width=auto&_ver=1&gid=193365308&mode=4&color1=333333&color2=00c08b&color3=00c08b" width="100%" height="400" frameborder="0"></iframe>
